--- a/css/main.css
+++ b/css/main.css
@@ -347,7 +347,7 @@ img{object-fit: cover}
     width: 100%;
     height: 100%;
     color: #fff;
-    background-color: rgba(0, 0, 0, .9);
+    background-color: rgba(0, 0, 0, .5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -427,7 +427,8 @@ img{object-fit: cover}
 }
 
 .our_projects .gallery .row > div {
-    position: relative
+    position: relative;
+    margin-bottom: 10px
 }
 
 
@@ -666,6 +667,7 @@ img{object-fit: cover}
 
     
     .header .slider li h2{font-size: 20px}
+    
 
 }
 
