--- a/css/style.css
+++ b/css/style.css
@@ -306,20 +306,20 @@ img {
     width: 100%;
     height: 100%;
     background-color: #07af8cde;
-    line-height: 188px;
+    line-height: 250px;
     text-align: center;
     color: #fff;
     font-weight: bold;
     font-size: 20px;
     display: none;
-    border-radius: 4%;
-    text-transform: uppercase;
+    border-radius: 10px
 
 }
 
 .our_team .box img {
     width: 100%;
-    border-radius: 10px
+    border-radius: 10px;
+    height: 100%
 }
 
 .our_team .box p {
@@ -555,6 +555,7 @@ img {
     color: #979797;
     font-weight: bold;
     width: 80%;
+    border-radius: 10px
 }
 
 .footer .resent > div {
@@ -591,6 +592,13 @@ img {
 
 /* end our footer */
 
+
+@media(max-width:400px){
+    
+    .our_team .box:not(:first-child) .overlay{
+        line-height: 310px
+    } 
+}
 
 
 @media(max-width:767px) {
